infra/k8s/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: z-commerce-dev.zeabix.com
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port: 
              name: https
  tls:
  - hosts:
    - z-commerce-dev.zeabix.com
    secretName: argocd-secret


# Secret for argocd    
#  kubectl edit secret argocd-secret -nargocd
#  Then modify tls.crt and tls.key with using 64base encoding value.

# 
# ref: https://stackoverflow.com/questions/69814886/blank-page-in-kubernetes-ingress
# kubectl get deploy argocd-server -o yaml -n argocd > argocd-server-deployment.yaml
# 1. change this existing:
#   containers:
#   - command:
#     - argocd-server
#     env:
# 2. to > 
# containers:
#- command:
#  - argocd-server
#  - --rootpath=/argocd
#  env:
# 3. Apply 
#  kubectl apply -f argocd-server-deployment.yaml
#
#
# find initial password
# kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
# and user is : admin
